Maintainer: Tobias Erhardt <tobias.erhardt@tum.de> and Thomas Nagler <thomas.nagler@tum.de>

Version 1.7 (July 30, 2015)
- Bug fix:
  * The S4-class objets of the Tawn copulas pointed to Archimedean CDFs, now corrected to true CDFs based on c-code
  * TauMatrix: restriction for input data to be in [0,1] removed
  * RVineCopSelect: no printing of family-Matrix

Version 1.6 (July 16, 2015)

- Imports
  * extend Imports to avoid undefined globals (CRAN E-mail 02.07.2015)
  * new version reqiures igraph (>= 1.0.0)

- Bug fix:
  * Definition of "C" in BiCopCDF for tawn copulas used constants u1 und u2 instead of arguments u and v
  * RVineStructureSelect: Adjust to new version of igraph. Tree structure was not selected correctly. igraph function names changed to the names used in the new version. Some small modifications to avoid some for loops and make the code easier to read.

- New functionality:
  * RVineTreePlot: option for a legend (and numbered nodes and edges)


Version 1.5 (June 2, 2015)

- New functionality:
  * as.copuladata: coerce to class copuladata
  * pairs.copuladata: pairs plots for objects of class copuladata
  * RVinePDF: PDF of an R-Vine Copula Model
  * BiCopSelect, RVineCopSelect, RVineStructureSelect: add option "rotations = TRUE" which augments the familyset with all rotations to a given family
  * RVineMatrix, RVineStructureSelect: allow upper triangular matrices as input (output remains lower triangular)
  * 'BiCop' objects for bivariate copulas:
    . add constructor 'BiCop' and plotting generic 'plot.BiCop'
    . define results of 'BiCopEst'/'BiCopSelect' as 'BiCop' objects
    . add compatibility with other BiCopXyz functions (BiCopPDF, BiCopPar2Tau, etc.)

- Bug fix:
  * BiCopEst: extend search interval for Tawn MLE to avoid optim-errors
  * BiCopEst: fix for optim error ('non-finite value supplied')
  * RVineSim: reorder U so that it corresponds to the order of RVM