@@ -2,7 +2,7 @@ Package: VineCopula
 Type: Package
 Title: Statistical Inference of Vine Copulas
 Version: 1.7
-Date: 2015-07-30
+Date: 2015-08-03
 Author: Ulf Schepsmeier, Jakob Stoeber, Eike Christian Brechmann, Benedikt Graeler, Thomas Nagler, Tobias Erhardt
 Maintainer: Tobias Erhardt <tobias.erhardt@tum.de>
 Depends: R (>= 2.11.0)
